# cap-sn-push-v

./: Cargo.toml  README.md  katex.html  log  result.arrow
.github/workflows/: static.yml
archive/: info.rs  opinion.rs
base/: Cargo.toml  test_runtime.toml
base/src/: agent.rs  decision.rs  executor.rs  info.rs  lib.rs  opinion.rs  runner.rs  stat.rs  util.rs
input/: Cargo.toml
input/src/: format.rs  lib.rs
my-config/: agent_config.toml  strategy_config.toml
my-config/agent/: condition.toml  initial_states.toml  uncertainty.toml
my-config/network/: ba100.toml
my-config/ops/cond/: d0b0_d[50-70_21]u25.csv  d95b0_d[20-40_21]u40.csv
my-config/ops/unct/: 1d_30.csv
my-config/result/: ba500_basic_test_agent.arrow  ba500_basic_test_info.arrow  ba500_basic_test_pop.arrow
my-config/strategy/: case2o.toml
my-config/strategy/info/: 98_98.csv  n95_95.csv
src/: agent.rs  config.rs  cpt.rs  decision.rs  dist.rs  executor.rs  info.rs  lib.rs  main.rs  opinion.rs  scenario.rs  stat.rs  value.rs
src/executor/: core.rs
src/info/: gen2.rs
src/opinion/: gen2.rs  paramter.rs
src/snippet/: deduction.rs
test/: graph.txt  graph_0.arrow  log  res_0.arrow  res_1.arrow  res_100.arrow  res_50.arrow  result.arrow  run_test-e0_agent.arrow  run_test-e0_agent_out.arrow  run_test-e0_info.arrow  run_test-e0_info_out.arrow  run_test-e0_pop.arrow  run_test-e0_pop_out.arrow  run_test-e1_agent.arrow  run_test-e1_agent_out.arrow  run_test-e1_info.arrow  run_test-e1_info_out.arrow  run_test-e1_pop.arrow  run_test-e1_pop_out.arrow  run_test-sample_agent.arrow  run_test-sample_info.arrow  run_test-sample_pop.arrow  run_test-t_agent.arrow  run_test-t_agent_out.arrow  run_test-t_info.arrow  run_test-t_info_out.arrow  run_test-t_pop.arrow  run_test-t_pop_out.arrow  run_test_agent.arrow  run_test_agent_out.arrow  run_test_info.arrow  run_test_info_out.arrow  run_test_pop.arrow  run_test_pop_out.arrow  test-m_agent_out.arrow  test-m_info_out.arrow  test-m_pop_out.arrow  test-senario_out.arrow  test2_agent_out.arrow  (+11 more)
test/config/: agent_params.toml  agent_params2.toml  agent_params3.toml  agent_params4.toml  general.toml  runtime.toml  runtime2.toml  scenario-e0.toml  scenario-e1.toml  scenario-i.toml  scenario-m.toml  scenario-t.toml  scenario.toml  scenario1.toml  test_agent_params.toml  test_initial_opinions.toml  test_scenario.toml
test/graph/: graph1.txt  sample.txt
v1/: Cargo.toml
v1/src/: lib.rs  main.rs  parameters.rs  scenario.rs
v1/src/parameters/: opinion.rs
v1/test/: run_test-e0_agent.arrow  run_test-e0_info.arrow  run_test-e0_pop.arrow  run_test-e1_agent.arrow  run_test-e1_info.arrow  run_test-e1_pop.arrow  run_test-sample_agent.arrow  run_test-sample_info.arrow  run_test-sample_pop.arrow  run_test-t_agent.arrow  run_test-t_info.arrow  run_test-t_pop.arrow  run_test_agent.arrow  run_test_info.arrow  run_test_pop.arrow
v1/test/config/: agent_params.toml  runtime.toml  scenario-e1.toml  scenario-t.toml  scenario.toml  test_agent_params.toml  test_initial_opinions.toml  test_scenario.toml
v1/test/graph/: graph.txt  grapht.txt  sample.txt
v2/: Cargo.toml
v2/src/: config.rs  exec.rs  io.rs  lib.rs  main.rs  parameter.rs
v2/test/: agent_config.toml  config.toml  network_config.toml  strategy_config.toml
v2/test/agent/: condition.toml  cpt.csv  initial_states.toml  probs.toml  prospect.csv  trust.toml  uncertainty.toml
v2/test/network/ba100/: edgelist.txt
v2/test/ops/cond/: 95_60-90.csv  95_80-90.csv
v2/test/ops/unct/: 1d_10.csv
v2/test/result/: test-start_agent.arrow  test-start_info.arrow  test-start_pop.arrow  test_agent.arrow  test_info.arrow  test_pop.arrow
v2/test/strategy/: informing.toml
v2/test/strategy/info/: a100_95.csv  inhibition.csv
v2_new/: gen_parameters.ipynb  graph_comm.ipynb  run.sh
v2_new/config/: agent-ng.toml  agent-ng0.toml  agent-o-ng.toml  agent-o-ok.toml  agent-o-xx.toml  agent-ok.toml  agent-ok0.toml  agent-temp.toml  agent-test.toml  agent_high-misinfo.toml  network-ba1000-10.toml  network-ba500-5.toml  network-facebook.toml  network-test.toml  network-wikivote.toml  strategy-test.toml  strategy1-c.toml  strategy1-m.toml  strategy1.toml  strategy2-c.toml  strategy2-m.toml  strategy2.toml  strategy2o-2-c.toml  strategy2o-2-m.toml  strategy2o-2.toml  strategy2o-c.toml  strategy2o-m.toml  strategy2o.toml  パラメータ特性_メモ.txt
v2_new/config/agent/: condition1.toml  condition2.toml  condition3.toml  condition_old.toml  probs-p0.toml  probs-p1.toml  probs-p2.toml  probs-p3.toml  probs-p4.toml  probs-p5.toml  probs-p995.toml  probs-p99y2.toml  probs-p99zzz.toml  probs-pa.toml  probs-pb.toml  probs-pc.toml  probs.toml  prospect.csv  trust.toml  uncertainty.toml
v2_new/config/agent-types/: agent-p0.toml  agent-p1.toml  agent-p2.toml  agent-p3.toml  agent-p4.toml  agent-p5.toml  agent-p99.toml  agent-p99y2.toml  agent-p99zzz.toml  agent-pa.toml  agent-pb.toml  agent-pc.toml  agent-t0-0.toml  agent-t0-1.toml  agent-t0-2.toml  agent-t1-0.toml  agent-t1-1.toml  agent-t1-2.toml
v2_new/config/cond/: 50_50.csv  50_90.csv  50_92.5.csv  50_95.csv  50_[80-90_5].csv  50_[90-97.5_16].csv  80_[80-90_5].csv  80_[80-95_7].csv  95_00-100.csv  95_30.csv  95_50.csv  95_60-100.csv  95_60-70.csv  95_60-80.csv  95_60-85.csv  95_60-90.csv  95_70-100.csv  95_70-80.csv  95_70-95.csv  95_80-95.csv  95_90.csv  95_[20-30_5].csv  95_[30-40_5].csv  95_[30-50_9].csv  95_[30-60_13].csv  95_[30-70_17].csv  95_[30-80_21].csv  95_[40-50_5].csv  95_[40-60_9].csv  95_[40-80_17].csv  95_[50-60_5].csv  95_[50-70_9].csv  95_[50-80_13].csv  95_[50-90_17].csv  95_[60-70_5].csv  95_[60-75_7].csv  95_[60-80_9].csv  95_[60-85_11].csv  95_[60-90_13].csv  95_[60-95_15].csv  (+163 more)
v2_new/config/informing/: case1-c.toml  case1-m.toml  case1.toml  case2-c.toml  case2-m.toml  case2.toml  (+2 more)
(+71 files in other folders)
