[package]
name = "cap-sn"
version = "0.20.0-rc2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subjective-logic = { git = "https://github.com/shinomi-lab/subjective-logic.git", tag = "v0.9.14" }
approx = "0.5"
graph-lib = { git = "https://github.com/shinomi-lab/graph-lib.git", tag = "v0.4.2" }
rand = { version = "0.8", features = ["small_rng"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.6"
toml = "0.8"
rand_distr = "0.4"
tracing = { version = "0.1", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-logfmt = "0.3"
num-traits = "0.2"
thiserror = "1.0"
either = "1.9"
anyhow = "1.0"
itertools = "0.13"
tokio = { version = "1.37", features = ["rt", "macros", "rt-multi-thread", "sync", "time"] }
futures = "0.3"
parking_lot = "0.12"
num_cpus = "1.8"
polars-arrow = { version = "0.40", features = ["io_ipc", "io_ipc_write_async", "io_ipc_compression"] }

[dev-dependencies]
polars = { version = "0.40", features = ["lazy", "ipc", "decompress", "dtype-u8" ] }
