[workspace]
resolver = "2"
members = ["base", "input", "v1", "v2"]

[workspace.dependencies]
subjective-logic = { git = "https://github.com/SotaKawashima/subjective-logic", tag = "v0.10.0" }
graph-lib = { git = "https://github.com/SotaKawashima/graph-lib", tag = "v0.4.2" }
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.6"
toml = "0.8"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
num-traits = "0.2"
itertools = "0.13"
tokio = { version = "1.39", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
polars-arrow = { version = "0.42", features = [
    "io_ipc",
    "io_ipc_write_async",
    "io_ipc_compression",
] }
thiserror = "1.0"
num_cpus = "1.8"
