[package]
name = "v1"
version = "0.20.0"
edition = "2021"

[dependencies]
base = { path = "../base" }
input = { path = "../input" }

num_cpus = "1.8"
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
polars-arrow = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
toml = { workspace = true }

rand = { workspace = true }
rand_distr = { workspace = true }
num-traits = { workspace = true }

subjective-logic = { workspace = true }
graph-lib = { workspace = true }

[dev-dependencies]
polars = { version = "0.40", features = ["lazy", "ipc", "decompress", "dtype-u8" ] }
