[package]
name = "v2"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base" }
input = { path = "../input" }
num_cpus = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
graph-lib = { workspace = true }
subjective-logic = { workspace = true }
