[package]
name = "v2"
version = "0.2.0"
edition = "2021"

[dependencies]
base = { path = "../base" }
input = { path = "../input" }
num_cpus = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
graph-lib = { workspace = true }
subjective-logic = { workspace = true }
itertools = { workspace = true }
polars-arrow = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
csv = "1.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
